user-controller-complete

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 9000
 MONGO_URI = mongodb://127.0.0.1:27017/Insta_Clone
 JWT_SECRET = Samad_is_a_developer
+CLOUD_NAME = doafhz3dm
+API_KEY = 296428152916852
+API_SECRET = 7Bx-CqTZNVk8kutWFOPk67o3UDk
